--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ DB_PASSWORD=NyteqlKzeuvLRRofLD87o0Pt2jTWzJ_D
 DB_NAME=tevzlgej
 
 PORT=3000
+PG_CONNECTION_STRING=postgres://tevzlgej:NyteqlKzeuvLRRofLD87o0Pt2jTWzJ_D@mouse.db.elephantsql.com/tevzlgej
 
