--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=mouse.db.elephantsql.com
-DB_USER=tevzlgej
-DB_PASSWORD=NyteqlKzeuvLRRofLD87o0Pt2jTWzJ_D
-DB_NAME=tevzlgej
+DB_HOST=83.222.10.111
+DB_USER=gen_user
+DB_PASSWORD=j55bxz7jg8
+DB_NAME=default_db
 
 PORT=3000
-PG_CONNECTION_STRING=postgres://tevzlgej:NyteqlKzeuvLRRofLD87o0Pt2jTWzJ_D@mouse.db.elephantsql.com/tevzlgej
+# PG_CONNECTION_STRING=postgres://tevzlgej:NyteqlKzeuvLRRofLD87o0Pt2jTWzJ_D@mouse.db.elephantsql.com/tevzlgej
 
